# cloud/api/api.ts
@@ -4,6 +4,7 @@ import { TracesApi } from "@/api/traces.schemas";
 import { DocsApi } from "@/api/docs.schemas";
 import { OrganizationsApi } from "@/api/organizations.schemas";
 import { ProjectsApi } from "@/api/projects.schemas";
+import { EnvironmentsApi } from "@/api/environments.schemas";
 
 export * from "@/errors";
 export * from "@/api/health.schemas";
@@ -11,10 +12,12 @@ export * from "@/api/traces.schemas";
 export * from "@/api/docs.schemas";
 export * from "@/api/organizations.schemas";
 export * from "@/api/projects.schemas";
+export * from "@/api/environments.schemas";
 
 export class MirascopeCloudApi extends HttpApi.make("MirascopeCloudApi")
   .add(HealthApi)
   .add(TracesApi)
   .add(DocsApi)
   .add(OrganizationsApi)
-  .add(ProjectsApi) {}
+  .add(ProjectsApi)
+  .add(EnvironmentsApi) {}
